--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rest Countries</title>
+  <title>Rest Countries using Weather API</title>
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKzYpjPEjISv5WaRU9oFEpok6YtmDr5pN1yT2bRjx0JhMJy6Hwl+AELwiH" crossorigin="anonymous">
 </head>
